# course_work

./: .coverage  .gitignore  pyproject.toml
src/: main.py  utils.py
tests/: test_utils.py
