[tool.poetry]
name = "course-work"
version = "0.1.0"
description = ""
authors = ["Sergey <kapetanvodichka@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
